--- a/css/css.css
+++ b/css/css.css
@@ -236,7 +236,7 @@ a:hover {
     }
 
     .media .footer {
-        background-color: #eee;
+        /* background-color: #eee*/
         padding: 10px;
     }
 
