--- a/css/css.css
+++ b/css/css.css
@@ -1,353 +1,153 @@
-*,
-*:before,
-*:after {
-    box-sizing: border-box;
-    object-fit: scale-down;
-    object-position: center;
-    vertical-align: middle;
-}
+*, *:before, *:after { box-sizing: border-box; object-fit: scale-down; object-position: center; vertical-align: middle; }
 
-body {
-    margin-top: auto;
-    font-size: 100%;
-    font-family: Verdana,'Open Sans', 'sans-serif';
-    background-color: #000;
-    background-image: url("../images/rainpix.png");
-    color: #fff;
-    background-position: top;
-    background-repeat: repeat-x;
-}
+* { padding: 0px; margin: 0px; }
 
-.top-content {
-    padding: 20px;
-}
+#header { height: 98vh; }
 
-@media (min-width: 400px){
-    figure{
-     margin: 5%;   
-        }  
-    
-}
+#header > img { width: 100%; height: 98vh; position: fixed; }
 
-@media (min-width: 700px){
-    figure{
-     margin: 10%;   
-        }  
-    
-}
-  
-@media (min-width: 1200px){
-    figure{
-     margin: 15%;   
-        }  
-    
-}
+#container { width: 100%; height: auto; background: #FF0000; position: relative; }
 
+ul { background: #000; text-align: left; padding: 0px; margin: 0px 0px 0px 0px; width: 100%; font-family: Verdana; margin-left: 2-px; margin-bottom: 2em; margin-left: auto; border-bottom: 1px solid #555; }
 
-figure {
-  display: inline-block;
-  text-align: center;
-  border: 0px dotted #000;
-  max-height: 350px;
-  
-}
-figure img {
-  vertical-align: top;
-      
-}
-figure figcaption {
-  border: 0px dotted #000;
+ul li { position: relative; display: inline-block; }
 
-}
+ul li a:visited { background-color: #ddd; color: #fff; text-decoration: none; }
 
-img {
-    max-width: 100%;
-    height: auto;
-}
+ul li a:visited:hover { background-color: #ddd; color: #000; text-decoration: none; }
 
-.credit {
-    display: block;
-    text-align: right;
-    font-family: "Verdana",Helvetica,Arial,sans-serif;
-    font-size: 10px;
-    line-height: 16px;
-    margin: 5px;
-    color: #dcdcdc;
-}
+ul li a:hover { background-color: #ddd; color: #000; text-decoration: none; }
 
-.credit a {
-    color: inherit;
-}
+ul li a.active { background-color: #4CAF50; color: #fff; }
 
-.credit__link {
-    color: #dcdcdc;
-    text-decoration: underline;
-}
+ul li a { text-decoration: none; color: #f2f2f2; text-align: center; font-size: 18px; display: block; padding: 10px 18px; }
 
-.intro {
-    word-wrap: normal;
-    padding-top: 15px;
-    object-fit: scale-down;
-    object-position: center;
-    vertical-align: middle;
-    width: 95%
-}
+ul li ul.dropdown { position: absolute; max-width: 130px; text-align: left; right: 0px; margin-top: 0px; display: none; }
 
-.title-text-main {
-    font-family: Impact;
-    font-size: 2.2em;
-    color: red;
-    text-shadow: -1px 0 black, 0 1px black, 2px 0 black, 0 -1px black;
-    font-weight: 900;
-    letter-spacing: 5;
-    word-break: keep-all;
-    position: inherit;
-}
+ul li:hover ul.dropdown { background-color: #FF0000; color: #000; display: inline-table; }
 
-h1 {
-    font-family: Verdana;
-    font-size: 39px;
-    color: #cce6ff;
-    text-shadow: -1px 0 black, 0 1px black, 2px 0 black, 0 -1px black;
-}
+ul li ul.dropdown li { display: block; border-bottom: 1px solid #555; }
 
-p {
-    margin: 0 0 1em 0;
-    color: #cce6ff;
-}
+#container_12dee79e { vertical-align: top; position: inherit; display: inline-block; width: 24%; min-height: 209px; background: none; }
 
-a {
-    color: #bbd3eb;
-    outline: none;
-    text-decoration: none;
-}
+#container_12dee79e_padding { margin: 10px; display: block; }
 
-a:visited {
-    color: #67abec;
-    text-decoration: none;
-}
+#container_694ba68e { vertical-align: top; position: inherit; display: inline-block; width: 24%; min-height: 209px; background: none; }
 
-a:hover {
-    text-decoration: underline;
-    color: #FF4800;
-}
+#container_694ba68e_padding { margin: 10px; display: block; }
 
-.author {
-    margin-bottom: 2.5em;
-}
+#container_192b9a7 { vertical-align: top; position: inherit; display: inline-block; width: 24%; min-height: 209px; background: none; }
 
-.author-meta-info {
-    float: left;
-    text-align: left;
-    position: relative;
-    width: 80%;
-}
+#container_192b9a7_padding { margin: 10px; display: block; }
 
-.meta-info__hotness,
-.author-meta-info__author-name,
-.author-meta-info__bio-link {
-    text-transform: uppercase;
-}
+#container_62709428 { vertical-align: top; position: inherit; display: inline-block; width: 24%; min-height: 209px; background: none; }
 
-.author-meta-info__published-info {
-    display: block;
-    font: 10px/16px "Graphik Medium",Helvetica,Arial,sans-serif;
-}
+#container_62709428_padding { margin: 10px; display: block; }
 
-.author-meta-info__bio-link {
-    color: #cce6ff;
-    font-weight: 500;
-}
+.box { border-radius: 5px; padding: 20px; vertical-align: top; position: inherit; display: inline-block; width: 100%; min-height: 150px; background: none; }
 
-.author-meta-info__bio-link:hover {
-    color: #969696;
-}
+@supports (grid-area: auto) { .boxes { display: grid; grid-template-columns: 1fr; }
+  @media (min-width: 600px) { .boxes { display: grid; grid-template-columns: 1fr 1fr; } }
+  @media (min-width: 900px) { .boxes { display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; } }
+  #container_12dee79e { width: auto; }
+  #container_694ba68e { width: auto; }
+  #container_62709428 { width: auto; }
+  #container_192b9a7 { width: auto; } }
 
-.author-meta-info__data-container {
-    display: inline-block;
-    vertical-align: top;
-    font: 10px/16px "Graphik",Helvetica,Arial,sans-serif;
-    font-weight: 500;
-    color: #FFFF;
-    letter-spacing: .4px;
-}
+@media (min-width: 800px) { .wrapper { display: grid; grid-gap: 10px; grid-template-columns: 1fr 1fr 1fr; grid-template-areas: "a" "b" "c"; background-color: #000; color: #444; width: 95%; height: auto; } }
 
-.meta-info {
-    width: 306px;
-    padding-top: 2px;
-    margin-left: 25%;
-}
+.box-grid { background-color: #444; color: #fff; border-radius: 5px; padding: 20px; font-size: 150%; margin-bottom: 10px; width: 85%; }
 
-.meta-info.is-standard,
-.author-meta-info__data-container {
-    max-width: 330px;
-    margin-top: 5px;
-}
+body { margin-top: auto; font-size: 100%; font-family: Verdana,'Open Sans', 'sans-serif'; background-color: #000; background-image: url("../images/rainpix.png"); color: #fff; background-position: top; background-repeat: repeat-x; }
 
-.author-meta-info {
-    width: 100%;
-    position: inherit;
-}
+.top-content { padding: 20px; }
 
-.author-meta-info__inner {
-    padding: 1px 0 0;
-    margin: 0;
-}
+@media (min-width: 400px) { figure { margin: 5%; } }
 
-.site-footer {
-    background: #cce6ff;
-    clear: both;
-    padding: 20px 0 80px;
-}
+@media (min-width: 700px) { figure { margin: 10%; } }
 
-.site-footer .site-info {
-    font-size: 14px;
-    color: #000000;
-    font-weight: 500;
-    margin-bottom: 0;
-    text-align: left;
-    padding-left: 50px;
-}
+@media (min-width: 1200px) { figure { margin: 15%; } }
 
-.site-footer .site-info .footer-links {
-    padding-left: 10px;
-}
+figure { display: inline-block; text-align: center; border: 0px dotted #000; max-height: 350px; }
 
-.site-footer .site-info a {
-    color: #000000;
-    margin-right: 10px;
-    text-decoration: none;
-}
+figure img { vertical-align: top; }
 
-.site-footer .site-info a:hover {
-    text-decoration: underline;
-}
+figure figcaption { border: 0px dotted #000; }
 
-.media {
-    margin-bottom: 2em;
-    border: 0;
-    padding: 10px;
-}
+img { max-width: 100%; height: auto; }
 
-.media > .title {
-    grid-area: title;
-}
+.credit { display: block; text-align: right; font-family: "Verdana",Helvetica,Arial,sans-serif; font-size: 10px; line-height: 16px; margin: 5px; color: #dcdcdc; }
 
-.media > .img {
-    grid-area: img;
-}
+.credit a { color: inherit; }
 
-.media > .content {
-    grid-area: bd;
-    padding-top: 15px;
-}
+.credit__link { color: #dcdcdc; text-decoration: underline; }
 
-.media > .footer {
-    grid-area: ft;
-}
+.intro { word-wrap: normal; padding-top: 15px; object-fit: scale-down; object-position: center; vertical-align: middle; width: 95%; }
 
-.media {
-    display: grid;
-    grid-column-gap: 20px;
-    grid-template-areas: "title"
-    "img"
-    "bd"
-    "ft";
-}
+.title-text-main { font-family: Impact; font-size: 2.2em; color: red; text-shadow: -1px 0 black, 0 1px black, 2px 0 black, 0 -1px black; font-weight: 900; letter-spacing: 5; word-break: keep-all; position: inherit; }
 
-@media (min-width: 600px) {
-    /* clearfix*/
-    .media:after {
-        content: "";
-        display: block;
-        clear: both;
-    }
+h1 { font-family: Verdana; font-size: 39px; color: #cce6ff; text-shadow: -1px 0 black, 0 1px black, 2px 0 black, 0 -1px black; }
 
-    .media > .media {
-        margin-left: 160px;
-        clear: both;
-    }
+p { margin: 0 0 1em 0; color: #cce6ff; }
 
-    .media .img {
-        float: left;
-        margin: 0 10px 0 0;
-        width: 960px;
-    }
+a { color: #bbd3eb; outline: none; text-decoration: none; }
 
-    .media .footer {
-        /* background-color: #eee*/
-        padding: 10px;
-    }
+a:visited { color: #67abec; text-decoration: none; }
 
-    .media.media-flip .img {
-        float: right;
-        margin: 0 0 0 10px;
-    }
+a:hover { text-decoration: underline; color: #FF4800; }
 
-    .media > * {
-        margin: 0 0 0 160px;
-    }
+.author { margin-bottom: 2.5em; }
 
-    .media.media-flip > * {
-        margin: 0 160px 0 0;
-    }
+.author-meta-info { float: left; text-align: left; position: relative; width: 80%; }
 
-    @supports (display: grid ) {
-        /* override */
-        .media > *,
-        .media.media-flip > * {
-            margin: 0;
-        }
+.meta-info__hotness, .author-meta-info__author-name, .author-meta-info__bio-link { text-transform: uppercase; }
 
-        .media .img,
-        .media.media-flip .img {
-            width: auto;
-            margin: 0;
-        }
+.author-meta-info__published-info { display: block; font: 10px/16px "Graphik Medium",Helvetica,Arial,sans-serif; }
 
-        .media:after {
-            content: none;
-        }
+.author-meta-info__bio-link { color: #cce6ff; font-weight: 500; }
 
-        .media {
-            display: grid;
-            grid-column-gap: 20px;
-            grid-template-columns: 1fr 3fr;
-            grid-template-rows: auto 1fr auto;
-            grid-template-areas: "img title"
-        "img bd"
-        "ft ft";
-        }
+.author-meta-info__bio-link:hover { color: #969696; }
 
-        .media.media-flip {
-            grid-template-columns: 3fr 1fr ;
-            grid-template-areas: "title img"
-        "bd img"
-        "ft ft";
-        }
+.author-meta-info__data-container { display: inline-block; vertical-align: top; font: 10px/16px "Graphik",Helvetica,Arial,sans-serif; font-weight: 500; color: #FFFF; letter-spacing: .4px; }
 
-        .media.img-flexie {
-            grid-template-columns: minmax(150px, 1fr) 3fr;
-        }
+.meta-info { width: 306px; padding-top: 2px; margin-left: 25%; }
 
-        .media.media-flip.img-flexie {
-            grid-template-columns: 3fr minmax(150px, 1fr);
-        }
+.meta-info.is-standard, .author-meta-info__data-container { max-width: 330px; margin-top: 5px; }
 
-        /* nested */
-        .media > .media {
-            grid-column: 2 / -1 ;
-            margin: 0; /* override */
-            margin-top: 1em;
-        }
-    }
-}
+.author-meta-info { width: 100%; position: inherit; }
 
-@media @media (min-width: 767px) .credit {
-    margin: 5px 0 25px;
-}
+.author-meta-info__inner { padding: 1px 0 0; margin: 0; }
 
- {
-    .credit {
-    }
-}
+.site-footer { background: #cce6ff; clear: both; padding: 20px 0 80px; }
+
+.site-footer .site-info { font-size: 14px; color: #000000; font-weight: 500; margin-bottom: 0; text-align: left; padding-left: 50px; }
+
+.site-footer .site-info .footer-links { padding-left: 10px; }
+
+.site-footer .site-info a { color: #000000; margin-right: 10px; text-decoration: none; }
+
+.site-footer .site-info a:hover { text-decoration: underline; }
+
+.media { margin-bottom: 2em; border: 0; padding: 10px; }
+
+.media > .title { grid-area: title; }
+
+.media > .img { grid-area: img; }
+
+.media > .content { grid-area: bd; padding-top: 15px; }
+
+.media > .footer { grid-area: ft; }
+
+.media { display: grid; grid-column-gap: 20px; grid-template-areas: "title" "img" "bd" "ft"; }
+
+@media (min-width: 600px) { /* clearfix*/
+  .media:after { content: ""; display: block; clear: both; }
+  .media > .media { margin-left: 160px; clear: both; }
+  .media .img { float: left; margin: 0 10px 0 0; width: 960px; }
+  .media .footer { /* background-color: #eee*/ padding: 10px; }
+  .media.media-flip .img { float: right; margin: 0 0 0 10px; }
+  .media > * { margin: 0 0 0 160px; }
+  .media.media-flip > * { margin: 0 160px 0 0; }
+  @supports (display: grid) { { /* override */ /* nested */ } .media > *, .media.media-flip > * { margin: 0; } .media .img, .media.media-flip .img { width: auto; margin: 0; } .media:after { content: none; } .media { display: grid; grid-column-gap: 20px; grid-template-columns: 1fr 3fr; grid-template-rows: auto 1fr auto; grid-template-areas: "img title" "img bd" "ft ft"; } .media.media-flip { grid-template-columns: 3fr 1fr; grid-template-areas: "title img" "bd img" "ft ft"; } .media.img-flexie { grid-template-columns: minmax(150px, 1fr) 3fr; } .media.media-flip.img-flexie { grid-template-columns: 3fr minmax(150px, 1fr); } .media > .media { grid-column: 2 / -1; margin: 0; /* override */ margin-top: 1em; } } }
+
+@media (min-width: 767px) { .credit { margin: 5px 0 25px; } }
